Bug 1191833: P1. Properly check webm mimetype against codec type. r=cpearce

Also move the logic inside WebMDecoder, this continue on with the logic used by MP4Decoder